[package]
name = "ethereum-vanity"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
ethers = "2.0.7"
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.8.4"

[[bin]]
name = "ethereum_vanity"
path = "src/main.rs"
